--- a/promesas.html
+++ b/promesas.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="js/appis.js" type="module" defer></script>
+    <script src="js/fetchapi.js" defer></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <input type="button" id="Verdatos" value="textconten">
+    <div id="contenedor"></div>
 </body>
 </html>
